--- a/app/src/main/res/drawable/maroon_overlay_bg.xml
+++ b/app/src/main/res/drawable/maroon_overlay_bg.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <gradient
-        android:angle="0"
-        android:startColor="@color/maroon_light"
-        android:endColor="@color/maroon_light"
+        android:angle="270"
+        android:startColor="#b71e3e"
+        android:endColor="#9b112e"
         android:type="linear"
         />
 </shape>
