--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:background="@color/maroon_dark"
+            android:background="#830823"
             android:gravity="center"
             android:weightSum="2">
             <androidx.cardview.widget.CardView
