--- a/app/src/main/res/layout/meow_navigation_cell.xml
+++ b/app/src/main/res/layout/meow_navigation_cell.xml
@@ -5,18 +5,21 @@
 
     <View
         android:id="@+id/v_circle"
-        android:layout_width="48dp"
+        android:layout_width="46dp"
         android:layout_gravity="center"
-        android:layout_height="48dp" />
+        android:layout_marginTop="2dp"
+
+        android:layout_height="46dp" />
 
     <FrameLayout
         android:id="@+id/fl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:layout_centerHorizontal="true"
-        android:elevation="6dp"
+
+        android:elevation="15dp"
         android:layout_gravity="center"
-        android:padding="8dp"
+        android:padding="10dp"
         tools:targetApi="lollipop">
 
         <dm.sime.com.kharetati.view.customview.meowbottomnavigation.CellImageView
@@ -24,9 +27,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginEnd="2dp"
+            android:layout_marginStart="2dp"
             android:padding="10dp"
+            android:layout_marginBottom="0dp"
+            android:layout_marginTop="-12dp"
             app:meow_imageview_fitImage="false"
-            app:meow_imageview_size="48dp" />
+            app:meow_imageview_size="40dp" />
 
         <TextView
             android:id="@+id/tv_count"
