--- a/app/src/main/res/drawable/rounded_corner_settings_font_bg.xml
+++ b/app/src/main/res/drawable/rounded_corner_settings_font_bg.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#E0E0E0"/>
-    <stroke android:width="3dp" android:color="#939393" />
+    <solid android:color="@color/setting_font_size_bg"/>
+    <stroke android:width="1dp" android:color="#939393" />
     <corners android:radius="10dp"/>
     <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
 </shape>
