--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -97,5 +97,11 @@
         <attr name="mbn_rippleColor" format="color" />
         <attr name="mbn_shadowColor" format="color" />
     </declare-styleable>
-
+    <style name="font_medium_bold_settings">
+        <item name="android:textSize">16dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:fontFamily">@font/dubai_font</item>
+    </style>
 </resources>
